--- a/docs/PWGrid.tex
+++ b/docs/PWGrid.tex
@@ -111,9 +111,9 @@ For electronic density (and potentials) we have:
 The value of $4 E_{\mathrm{cut}}$ corresponds to \jlinline{ecutrho} field of
 of \jlinline{PWGrid}.
 
-In the implementation, we first generate a set of $\mathbf{G}$-vectors which satify
+In the implementation, we first generate a set of $\mathbf{G}$-vectors which satisfies
 Equation \eqref{eq:ecutrho_def} and derives several subsets from it which
-satisfy Equation \eqref{ecutwfc_def} for a given $\mathbf{k}$-points.
+satisfy Equation \eqref{eq:ecutwfc_def} for a given $\mathbf{k}$-points.
 
 An instance of \jlinline{PWGrid} can be initialized by using its constructor
 which has the following signature:
