--- a/docs/PotentialsEnergies.tex
+++ b/docs/PotentialsEnergies.tex
@@ -19,7 +19,7 @@ H_{\mathrm{KS}} \psi_{i\mathbf{k}}(\mathbf{r}) =
 
 \input{images/Energies_struct}
 
-\seubsection{Electron density}
+\subsection{Electron density}
 
 Electron density $\rho(\mathbf{r})$ is calculated as:
 \begin{equation}
