--- a/docs/images/Energies_struct.tex
+++ b/docs/images/Energies_struct.tex
@@ -3,16 +3,16 @@
 \begin{tikzpicture}
 \node[mybox] (box) {%
 \begin{minipage}{0.6\textwidth}%
-\begin{minted}{julia}
+\begin{minted}[fontsize=\footnotesize]{julia}
 mutable struct Energies
-    Kinetic::Float64
-    Ps_loc::Float64
-    Ps_nloc::Float64
-    Hartree::Float64
-    XC::Float64
-    NN::Float64
-    PspCore::Float64
-    mTS::Float64
+  Kinetic::Float64
+  Ps_loc::Float64
+  Ps_nloc::Float64
+  Hartree::Float64
+  XC::Float64
+  NN::Float64
+  PspCore::Float64
+  mTS::Float64
 end
 \end{minted}
 \end{minipage}
