--- a/docs/images/GVectors_struct.tex
+++ b/docs/images/GVectors_struct.tex
@@ -3,14 +3,14 @@
 \begin{tikzpicture}
 \node[mybox] (box) {%
 \begin{minipage}{0.6\textwidth}%
-\begin{minted}{julia}
+\begin{minted}[fontsize=\footnotesize]{julia}
 struct GVectors
-    Ng::Int64
-    G::Array{Float64,2}
-    G2::Array{Float64,1}
-    idx_g2r::Array{Int64,1}
-    G2_shells::Array{Float64,1}
-    idx_g2shells::Array{Int64,1}
+  Ng::Int64
+  G::Array{Float64,2}
+  G2::Array{Float64,1}
+  idx_g2r::Array{Int64,1}
+  G2_shells::Array{Float64,1}
+  idx_g2shells::Array{Int64,1}
 end
 \end{minted}
 \end{minipage}
