--- a/docs/images/KPoints_struct.tex
+++ b/docs/images/KPoints_struct.tex
@@ -3,13 +3,13 @@
 \begin{tikzpicture}
 \node[mybox] (box) {%
 \begin{minipage}{0.6\textwidth}%
-\begin{minted}{julia}
+\begin{minted}[fontsize=\footnotesize]{julia}
 struct KPoints
-    Nkpt::Int64
-    mesh::Tuple{Int64,Int64,Int64}
-    k::Array{Float64,2}
-    wk::Array{Float64,1}
-    RecVecs::Array{Float64,2}
+  Nkpt::Int64
+  mesh::Tuple{Int64,Int64,Int64}
+  k::Array{Float64,2}
+  wk::Array{Float64,1}
+  RecVecs::Array{Float64,2}
 end
 \end{minted}
 \end{minipage}
