--- a/docs/images/Potentials_struct.tex
+++ b/docs/images/Potentials_struct.tex
@@ -3,12 +3,12 @@
 \begin{tikzpicture}
 \node[mybox] (box) {%
 \begin{minipage}{0.6\textwidth}%
-\begin{minted}{julia}
+\begin{minted}[fontsize=\footnotesize]{julia}
 mutable struct Potentials
-    Ps_loc::Array{Float64,1}
-    Hartree::Array{Float64,1}
-    XC::Array{Float64,2}
-    Total::Array{Float64,2}
+  Ps_loc::Array{Float64,1}
+  Hartree::Array{Float64,1}
+  XC::Array{Float64,2}
+  Total::Array{Float64,2}
 end
 \end{minted}
 \end{minipage}
