--- a/docs/images/PsPot_GTH_struct.tex
+++ b/docs/images/PsPot_GTH_struct.tex
@@ -3,18 +3,18 @@
 \begin{tikzpicture}
 \node[mybox] (box) {%
 \begin{minipage}{0.6\textwidth}%
-\begin{minted}{julia}
+\begin{minted}[fontsize=\footnotesize]{julia}
 struct PsPot_GTH
-    pspfile::String
-    atsymb::String
-    zval::Int64
-    rlocal::Float64
-    rc::Array{Float64,1}
-    c::Array{Float64,1}
-    h::Array{Float64,3}
-    lmax::Int64
-    Nproj_l::Array{Int64,1}
-    rcut_NL::Array{Float64,1}
+  pspfile::String
+  atsymb::String
+  zval::Int64
+  rlocal::Float64
+  rc::Array{Float64,1}
+  c::Array{Float64,1}
+  h::Array{Float64,3}
+  lmax::Int64
+  Nproj_l::Array{Int64,1}
+  rcut_NL::Array{Float64,1}
 end
 \end{minted}
 \end{minipage}
