Add build script, add some equations, minor formatting stuffs

--- a/docs/Hamiltonian.tex
+++ b/docs/Hamiltonian.tex
@@ -12,3 +12,9 @@ Operators:
 \end{itemize}
 
 \subsection{Iterative diagonalization of Hamiltonian}
+
+\begin{itemize}
+\item \jlinline{diag_LOBPCG}
+\item \jlinline{diag_davidson}
+\item \jlinline{diag_Emin_PCG}
+\end{itemize}
