Update BIBLIO format

--- a/docs/BIBLIO.bib
+++ b/docs/BIBLIO.bib
@@ -16,22 +16,22 @@
 
 @misc{juliaorg,
   title = {Julia programming language},
-  howpublished = {\url{https://julialang.org/}},
+  howpublished = {{\footnotesize\url{https://julialang.org/}}},
 }
 
 @misc{CP2Kweb,
   title = {The {CP2K} developers group},
-  howpublished = {\url{https://www.cp2k.org/}}
+  howpublished = {{\footnotesize\url{https://www.cp2k.org/}}}
 }
 
 @misc{spglib,
   title = {SPGLIB},
-  howpublished = {\url{https://github.com/atztogo/spglib}},
+  howpublished = {{\footnotesize\url{https://github.com/atztogo/spglib}}},
 }
 
 @misc{Libxc.jl,
   title = {Libxc.jl},
-  howpublished = {\url{https://github.com/unkcpz/Libxc.jl}}
+  howpublished = {{\footnotesize\url{https://github.com/unkcpz/Libxc.jl}}}
 }
 
 @UNPUBLISHED{Regier2016,
