Add section about ionic forces calculation. Test with Libertine font.

--- a/docs/Forces.tex
+++ b/docs/Forces.tex
@@ -1,13 +1,13 @@
-# Calculation of ionic forces
+\section{Calculation of atomic forces}
 
 These notes are adapted from Kohanoff2006.
 
-The forces on the nuceli of atomic species $s$ are given by
-$$
+The forces on the nuclei of atomic species $s$ are given by
+\begin{equation}
 \mathbf{F}_{I}^{s} = -\frac{\partial E_{\mathrm{KS}}}{\partial\mathbf{R}_{I}^{s}}
-$$
+\end{equation}
 Specifically:
-$$
+\begin{equation}
 \mathbf{F}_{I}^{s} = \int \mathbf{\rho}(\mathbf{r})\left(V^{\mathrm{Ps,loc}}_{s}\right)'
 \left(\left| \mathbf{r} - \mathbf{R}_{I} \right|\right)
 \frac{\mathbf{r} - \mathbf{R}_{I}}{\left| \mathbf{r} - \mathbf{R}_{I} \right|}
@@ -15,7 +15,7 @@ $$
 \frac{Z_{I}}{2} \sum_{J \neq I} Z_{J}
 \frac{\mathbf{R}_{I} - \mathbf{R}_{J}}{\left| \mathbf{R}_{I} - \mathbf{R}_{J} \right|^3} +
 \mathbf{F}^{\mathrm{Ps,nloc}}_{s,I}
-$$
+\end{equation}
 
 $\left( V^{\mathrm{Ps,loc}}_{s} \right)'$ is the derivative of the local part of the pseudopotential
 
@@ -24,7 +24,7 @@ $\mathbf{F}_{\mathrm{Ps,nloc}}^{s}$: nonlocal pseudopotential contribution to th
 Using plane wave basis set.
 
 Nuclear-nuclear contribution:
-$$
+\begin{equation}
 F^{NN}_{s,I} = \frac{Z_{I}}{2}\sum_{J \neq I}^{P} Z_{J}
 \sum_{L=-L_{\mathrm{max}}}^{L_{\mathrm{max}}}
 \left( \mathbf{R}_{I} + l - \mathbf{R}_{J} \right) \times
@@ -33,10 +33,26 @@ F^{NN}_{s,I} = \frac{Z_{I}}{2}\sum_{J \neq I}^{P} Z_{J}
 \frac{\eta \mathrm{e}^{-\eta^2}\left|\mathbf{R}_{I} + l - \mathbf{R}_{J} \right|^2}
 {\left|\mathbf{R}_{I} + l - \mathbf{R}_{J} \right|}
 \right]
-$$
+\end{equation}
+
 Local pseudopotential contribution:
-$$
+\begin{equation}
 F^{\mathrm{Ps,loc}}_{s,I} = \Omega \sum_{\mathbf{G} \neq \mathbf{0}}
 \mathrm{i}\mathbf{G}\,\mathrm{e}^{\mathbf{G}\cdot\mathbf{R}_{I}}
 V^{\mathrm{Ps,loc}}_{\mathrm{s}}(G) \rho(\mathbf{G})
-$$
+\end{equation}
+
+Nonlocal pseudopotential contribution:
+\begin{equation}
+F^{\mathrm{Ps,nloc}}_{s,I} = 2\mathrm{Re}\left\{
+\sum_{\mathbf{k}} \omega_{\mathbf{k}} \sum_{lm} \sum_{i=1}^{N_{\mathbf{k}}}
+f^{(\mathbf{k})}_{i}
+\alpha^{s}_{lm} F^{lm,s*}_{I,i} D^{lm,s*}_{I,i}
+\right\}
+\end{equation}
+where
+\begin{equation}
+D^{lm,s*}_{I,i} = \sum_{\mathbf{G}} \imath \mathbf{G}
+e^{\imath\mathbf{G}\cdot\mathbf{R}_{I}}
+f^{s}_{lm}(\mathbf{G}+\mathbf{k}) C_{i\mathbf{k}}(\mathbf{G})
+\end{equation}
