Some update and clean up docs

--- a/docs/Atoms.tex
+++ b/docs/Atoms.tex
@@ -12,8 +12,8 @@ The type \jlinline{Atoms} contains the following information:
 \jlinline{Atoms} also contains several other fields such as \jlinline{Zvals}
 which will be set according to the pseudopotentials assigned to
 the instance of \jlinline{Atoms}.
-\footnote{Not all fields of \jlinline{Atoms} (or any custom types defined in \textsf{PWDFT.jl})
-are listed. The most up to date definition can be consulted in the corresping source code.}
+\sidenote{\footnotesize{Not all fields of \jlinline{Atoms} (or any custom types defined in \textsf{PWDFT.jl})
+are listed. The most up to date definition can be consulted in the corresping source code.}}
 
 \input{images/Atoms_struct}
 
