--- a/docs/Pseudopotential.tex
+++ b/docs/Pseudopotential.tex
@@ -128,7 +128,7 @@ reference \cite{Goedecker1996} and the book \cite{Marx2009}
 for more information about GTH pseudopotentials.
 
 Due to the separation of local and non-local components of electrons-nuclei
-interaction, Equation \eqref{eq:E_ele_nuc} can be written as
+interaction, the electron-nuclei interaction energy can be written as
 \begin{equation}
 E_{\mathrm{ele-nuc}} = E^{\mathrm{PS}}_{\mathrm{loc}}
 + E^{\mathrm{PS}}_{\mathrm{nloc}}
