--- a/docs/Installation.tex
+++ b/docs/Installation.tex
@@ -1,31 +1,12 @@
-\txtinline{PWDFT.jl} is a package to solve electronic structure problems
-based on density functional theory (DFT) and Kohn-Sham equations
-It is written in Julia programming language.
-
-The Kohn-Sham orbitals are expanded using plane wave basis. This basis set is
-very popular within solid-state community and is also used in several electronic
-structure package such as Quantum ESPRESSO, ABINIT, VASP, etc.
-
-Features
-
-- Total energy calculation of molecules, surfaces, and crystalline system
-  within periodic unit cell (however, no corrections are 
-  implemented for non-periodic systems yet).
-- SCF with electron density mixing (for semiconducting and metallic systems)
-- Direct minimization method using conjugate gradient (for semiconducting systems)
-- GTH pseudopotentials (included in the repository)
-- LDA-VWN and GGA-PBE functionals (via `Libxc.jl`)
-
 \section{Installation}
 
-Requirements
-
-- [Julia: \url{https://julialang.org/downloads} version >= 0.7,
-  with the following packages installed:
-  - FFTW
-  - SpecialFunctions
-  - Libxc (a wrapper to Libxc \url{https://gitlab.com/libxc/libxc}
-  - LibSymspg (a wrapper to spglib \url{https://github.com/atztogo/spglib}
+Requirements Julia version >= 0.7, with the following packages installed:
+\begin{itemize}
+\item FFTW
+\item SpecialFunctions
+\item Libxc (a wrapper to Libxc {\footnotesize \url{https://gitlab.com/libxc/libxc}}
+\item LibSymspg (a wrapper to spglib {\footnotesize \url{https://github.com/atztogo/spglib}}
+\end{itemize}
 
 These packages are registered so they can be installed by using Julia's package manager.
 
@@ -37,45 +18,46 @@ Pkg.add("Libxc")
 Pkg.add("LibSymspg")
 \end{juliacode}
 
-These packages should be automatically installed `PWDFT.jl` is installed as
-local package (see below).
+These packages should be automatically installed when
+\txtinline{PWDFT.jl} is installed as local package (see below).
 
-Currently, this package is not yet registered. So, `Pkg.add("PWDFT")` will not work (yet).
+Currently, this package is not yet registered.
+So, \jlinline{Pkg.add("PWDFT")} will not work (yet).
 
 We have several alternatives:
 
-1. Using Julia's package manager to install directly from the repository URL:
+Using Julia's package manager to install directly from the repository URL:
 
-```julia
-Pkg.add(PackageSpec(url="https://github.com/f-fathurrahman/PWDFT.jl"))
-```
+\begin{juliacode}
+Pkg.add(PackageSpec(url="https://github.com/f-fathurrahman/PWDFT.jl"))  
+\end{juliacode}
 
-2. Using Julia development directory. We will use \txtinline{$HOME/.julia/dev}
-   for this.
-   To enable \txtinline{$HOME/.julia/dev} directory, we need to modify the Julia's
-  \txtinline{LOAD_PATH} variable. Add the following line in your
-  \txtinline{$HOME/.julia/config/startup.jl}.
+Using Julia development directory. We will use \txtinline{$HOME/.julia/dev}
+for this. To enable \txtinline{$HOME/.julia/dev} directory, we need to modify the Julia's
+\txtinline{LOAD_PATH} variable. Add the following line in your
+\txtinline{$HOME/.julia/config/startup.jl}.
 
 \begin{juliacode}
 push!(LOAD_PATH, expanduser("~/.julia/dev"))
 \end{juliacode}
 
-  After this has been set, you can download the the package as zip file (using Github) or
-  clone this repository to your computer.
+After this has been set, you can download the the package as zip file (using Github) or
+clone this repository to your computer.
 
-  If you download the zip file, extract the zip file under
-  \txtinline{$HOME/.julia/dev}. You need to rename the extracted directory
-  to `PWDFT` (with no `.jl` extension).
+If you download the zip file, extract the zip file under
+\txtinline{$HOME/.julia/dev}. You need to rename the extracted directory
+to \txtinline{PWDFT} (with no \txtinline{.jl} extension).
 
 Alternatively, create symlink under \txtinline{$HOME/.julia/dev}
-to point to you cloned (or extracted) `PWDFT.jl` directory. The link name should not
-contain the `.jl` part. For example:
+to point to you cloned (or extracted) \txtinline{PWDFT.jl} directory.
+The link name should not contain the \txtinline{.jl} part. For example:
 
 \begin{textcode}
 ln -fs /path/to/PWDFT.jl $HOME/.julia/dev/PWDFT    
 \end{textcode}
 
-3. Install PWDFT.jl as local package. Firstly, get into Pkg's REPL mode by tapping `]`,
+(Alternative) Install PWDFT.jl as local package.
+Firstly, get into Pkg's REPL mode by tapping \jlinline{]},
 and activate a independent environment `activate .` .
 
 Install the PWDFT.jl package in this environment:
@@ -106,167 +88,7 @@ self-consistent field iteration and direct energy minimization.
 
 Units
 
-`PWDFT.jl` internally uses Hartree atomic units (energy in Hartree and length in bohr).
+\txtinline{PWDFT.jl} internally uses Hartree atomic
+units (energy in Hartree and length in bohr).
 
-A simple work flow
-
-- create an instance of `Atoms`:
-
-\begin{juliacode}
-atoms = Atoms(xyz_file="CH4.xyz", LatVecs=gen_lattice_sc(16.0))
-\end{juliacode}
-
-- create an instance of `Hamiltonian`:
-
-\begin{juliacode}
-ecutwfc = 15.0 # in Hartree
-pspfiles = ["../pseudopotentials/pade_gth/C-q4.gth",
-            "../pseudopotentials/pade_gth/H-q1.gth"]
-Ham = Hamiltonian( atoms, pspfiles, ecutwfc )
-\end{juliacode}
-
-- solve the Kohn-Sham problem
-
-\begin{juliacode}
-KS_solve_SCF!( Ham, betamix=0.2 )  # using SCF (self-consistent field) method
-# or
-KS_solve_Emin_PCG!( Ham ) # direct minimization using preconditioned conjugate gradient
-\end{juliacode}
-
-More examples on creating an instance of \jlinline{Atoms}
-
-GaAs crystal (primitive unit cell), using keyword \jlinline{xyz_string_frac}:
-\begin{juliacode}
-# Atoms
-atoms = Atoms( xyz_string_frac=
-    """
-    2
-
-    Ga  0.0   0.0   0.0
-    As  0.25  0.25  0.25
-    """,
-    in_bohr=true,
-    LatVecs = gen_lattice_fcc(10.6839444516)
-)
-\end{juliacode}
-
-
-Hydrazine molecule in extended xyz file
-\begin{juliacode}
-atoms = Atoms(ext_xyz_file="N2H4.xyz")
-\end{juliacode}
-with the following `N2H4.xyz` file (generated using [ASE](https://wiki.fysik.dtu.dk/ase/)):
-\begin{textcode}
-6
-Lattice="11.896428 0.0 0.0 0.0 12.185504 0.0 0.0 0.0 11.151965" Properties=species:S:1:pos:R:3:Z:I:1 pbc="T T T"
-N       5.94821400       6.81171100       5.22639100        7 
-N       5.94821400       5.37379300       5.22639100        7 
-H       6.15929600       7.18550400       6.15196500        1 
-H       5.00000000       7.09777800       5.00000000        1 
-H       5.73713200       5.00000000       6.15196500        1 
-H       6.89642800       5.08772600       5.00000000        1 
-\end{textcode}
-
-Lattice vectors information is taken from the xyz file.
-
-
-More examples on creating an instance of `Hamiltonian`
-
-Using 3x3x3 Monkhorst-Pack kpoint grid (usually used for crystalline systems):
-\begin{juliacode}
-Ham = Hamiltonian( atoms, pspfiles, ecutwfc, meshk=[3,3,3] )    
-\end{juliacode}
-
-Include 4 extra states:
-\begin{juliacode}
-Ham = Hamiltonian( atoms, pspfiles, ecutwfc, meshk=[3,3,3], extra_states=4 )
-\end{juliacode}
-
-Using spin-polarized (`Nspin=2 `):
-\begin{juliacode}
-Ham = Hamiltonian( atoms, pspfiles, ecutwfc, meshk=[3,3,3],
-    Nspin=2, extra_states=4 )
-\end{juliacode}
-
-NOTES: Currently spin-polarized calculations are only supported by
-specifying calculations with smearing scheme (no fixed magnetization yet),
-so \jlinline{extra_states} should also be specified.
-
-
-Using PBE exchange-correlation functional:
-\begin{juliacode}
-Ham = Hamiltonian( atoms, pspfiles, ecutwfc, meshk=[3,3,3],
-    Nspin=2, extra_states=4, xcfunc="PBE" )
-\end{juliacode}
-Currently, only two XC functional is supported, namely `xcfunc="VWN"` (default) and
-`xcfunc="PBE"`. Future developments should support all functionals included in LibXC.
-
-
-More examples on solving the Kohn-Sham problem
-
-Several solvers are available:
-
-- \jlinline{KS_solve_SCF!}: SCF algorithm with density mixing
-
-- \jlinline{KS_solve_SCF_potmix!}: SCF algorithm with XC and Hartree potential mixing
-
-- \jlinline{KS_solve_Emin_PCG!}: using direct total energy minimization by preconditioned conjugate
-  gradient method (proposed by Prof. Arias, et al.). Only
-  the version which works with systems with band gap is implemented.
-
-Stopping criteria is based on difference in total energy.
-
-
-The following example will use \jlinline{Emin_PCG}.
-It will stop if the difference in total energy is less than
-\jlinline{etot_conv_thr} and it occurs twice in a row.
-\begin{juliacode}
-KS_solve_Emin_PCG!( Ham, etot_conv_thr=1e-6, NiterMax=150 )
-\end{juliacode}
-
-Using SCF with \jlinline{betamix} (mixing parameter) 0.1:
-\begin{juliacode}
-KS_solve_SCF!( Ham, betamix=0.1 )
-\end{juliacode}
-
-Smaller `betamix` usually will lead to slower convergence but more stable.
-Larger `betamix` will give faster convergence but might result in unstable
-SCF.
-
-Several mixing methods are available in \jlinline{KS_solve_SCF!}:
-
-- `simple` or linear mixing
-
-- \jlinline{linear_adaptive}
-
-- `anderson`
-
-- `broyden`
-
-- `pulay`
-
-- `ppulay`: periodic Pulay mixing
-
-- `rpulay`: restarted Pulay mixing
-
-
-For metallic system, we use Fermi smearing scheme for occupation numbers of electrons.
-This is activated by setting \jlinline{use_smearing=true} and specifying a small smearing parameter `kT`
-(in Hartree, default `kT=0.001`).
-
-\begin{juliacode}
-KS_solve_SCF!( Ham, mix_method="rpulay", use_smearing=true, kT=0.001 )
-\end{juliacode}
-
-
-%Band structure calculations
-%Please see
-%[this](examples/bands_Si_fcc/run_bands.jl) as
-%an example of how this can be obtained.
-
-Citation
-
-- Fadjar Fathurrahman, Mohammad Kemal Agusta, Adhitya Gandaryus Saputro, Hermawan Kresno Dipojono
-  PWDFT.jl : A Julia package for electronic structure calculation using density functional theory and plane wave basis](https://doi.org/10.1016/j.cpc.2020.107372).
-  Comp. Phys. Comm. **256** 107372 (2020).
 
