--- a/docs/PWGrid.tex
+++ b/docs/PWGrid.tex
@@ -26,11 +26,11 @@ where $n_1, n_2, n_3$ are integer numbers and
 $\mathbf{b}_1, \mathbf{b}_2, \mathbf{b}_3$ are three vectors describing
 unit cell of reciprocal lattice or \textit{unit reciprocal lattice vectors}.
 They satisfy the following relations:
-\begin{align}
-\mathbf{a}_1 = 2\pi\frac{\mathbf{a}_{2} \times \mathbf{a}_{3}}{\Omega}
-\mathbf{a}_2 = 2\pi\frac{\mathbf{a}_{3} \times \mathbf{a}_{1}}{\Omega}
-\mathbf{a}_3 = 2\pi\frac{\mathbf{a}_{1} \times \mathbf{a}_{2}}{\Omega}
-\end{align}
+\begin{align*}
+\mathbf{a}_1 & = 2\pi\frac{\mathbf{a}_{2} \times \mathbf{a}_{3}}{\Omega} \\
+\mathbf{a}_2 & = 2\pi\frac{\mathbf{a}_{3} \times \mathbf{a}_{1}}{\Omega} \\
+\mathbf{a}_3 & = 2\pi\frac{\mathbf{a}_{1} \times \mathbf{a}_{2}}{\Omega} \\
+\end{align*}
 
 A periodic function
 \begin{equation}
