Add some psp notes

--- a/docs/Pseudopotential.tex
+++ b/docs/Pseudopotential.tex
@@ -54,6 +54,113 @@ where $x=G r_{\mathrm{loc}}$.
 
 \input{images/PsPotNL_struct}
 
+Some notes about \txtinline{prj2beta} variable: prj2beta is currently
+using some hardcoded size. It is allocated by the statement:
+\begin{juliacode}
+prj2beta = Array{Int64}(undef,3,Natoms,4,7)}
+\end{juliacode}
+The first dimension is the maximum number of projectors per $l$-channel
+of GTH pseudopotential.
+The second dimension is number of atoms.
+The third dimension is the number of angular momentum
+The 4th is the m component.
+$l$ and $m$ might be combined into one index.
+
+Alternative: from ibeta index and atom index, we can
+get iprj, l, and m ?
+
+\begin{juliacode}
+NbetaNL = 0
+for ia = 1:Natoms
+  isp = atm2species[ia]
+  psp = Pspots[isp]
+  for l = 0:psp.lmax
+    for iprj = 1:psp.Nproj_l[l+1]
+      for m = -l:l
+          NbetaNL = NbetaNL + 1
+          prj2beta[iprj,ia,l+1,m+psp.lmax+1] = NbetaNL
+      end
+    end
+  end
+end
+\end{juliacode}
+
+Alternative:
+\begin{juliacode}
+prj2beta[1:Natoms][1:Nprojl,l,m]
+# l = 1,2,3,4 (s,p,d,f) # 1-based
+
+# l = 1
+# m = 1
+
+# l = 2
+# m = -1,
+\end{juliacode}
+
+This is essentially a way (among several possible ways) to arrange nonlocal
+projectors for all atoms.
+These projectors will depend on the atomic positions.
+Here's how we arrange them:
+\begin{juliacode}
+for ik = 1:Nkpt
+    ibeta = 0
+    for ia = 1:Natoms
+        isp = atm2species[ia]
+        psp = Pspots[isp]
+        for l = 0:psp.lmax
+        for iprj = 1:psp.Nproj_l[l+1]
+        for m = -l:l
+            ibeta = ibeta + 1
+            idx_gw2g = pw.gvecw.idx_gw2g[ik]
+            for igk = 1:Ngw[ik]
+                ig = idx_gw2g[igk]
+                g[1] = G[1,ig] + k[1,ik]
+                g[2] = G[2,ig] + k[2,ik]
+                g[3] = G[3,ig] + k[3,ik]
+                Gm = norm(g)
+                GX = atpos[1,ia]*g[1] + atpos[2,ia]*g[2] + atpos[3,ia]*g[3]
+                Sf = cos(GX) - im*sin(GX)
+                betaNL[ik][igk,ibeta] =
+                (-1.0*im)^l * Ylm_real(l,m,g)*eval_proj_G(psp,l,iprj,Gm,pw.CellVolume)*Sf
+            end
+        end
+        end
+        end
+    end
+end  # kpoints
+\end{juliacode}
+Note tha the above loop should be done in the way prj2beta is constructed.
+
+Main use case of prj2beta is found in op V Ps nloc:
+\begin{juliacode}
+for ist in 1:Nstates
+    for ia in 1:Natoms
+        isp = atm2species[ia]
+        psp = Pspots[isp]
+        for l in 0:psp.lmax
+        for m in -l:l
+            for iprj in 1:psp.Nproj_l[l+1], jprj in 1:psp.Nproj_l[l+1]
+                #
+                ibeta = prj2beta[iprj,ia,l+1,m+psp.lmax+1]
+                jbeta = prj2beta[jprj,ia,l+1,m+psp.lmax+1]
+                #
+                hij = psp.h[l+1,iprj,jprj]
+                for ig in 1:Ngw[ik]
+                    Vpsi[ig,ist] = Vpsi[ig,ist] + hij*betaNL[ik][ig,ibeta]*betaNL_psi[ist,jbeta]
+                end
+            end
+        end # m
+        end # l
+    end
+end
+\end{juliacode}
+
+In this case wen need prj2beta to access ibeta and jbeta indices, for current ia, l, and m.
+
+In some cases, hij is diagonal, so there is no need to use iprj and jprj, for example ONCV.
+
+
+
 The nonlocal component of GTH pseudopotential can written in real space as
 \begin{equation}
 V^{\mathrm{PS}}_{l}(\mathbf{r}-\mathbf{R}_{I},\mathbf{r}'-\mathbf{R}_{I}) =
