--- a/docs/Pseudopotential_v1.lyx
+++ b/docs/Pseudopotential_v1.lyx
@@ -18,7 +18,7 @@
 \font_sans "default" "default"
 \font_typewriter "default" "default"
 \font_math "auto" "auto"
-\font_default_family sfdefault
+\font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
